--- a/src/test/resources/serenity.conf
+++ b/src/test/resources/serenity.conf
@@ -5,6 +5,7 @@ webdriver {
 
 headless.mode = false
 logging.level.org.openqa.selenium= INFO
+chrome_preferences.profile.default_content_setting_values.geolocation = 1
 logging.level.net.thucydides = INFO
 
 serenity {
@@ -16,9 +17,29 @@ serenity {
 webdriver {
   capabilities {
     "goog:chromeOptions" {
-      args = [ "start-maximized", "disable-popup-blocking",
+      args = [ "start-maximized","test-type", "no-sandbox", "disable-popup-blocking",
       "disable-download-notification", "ignore-certificate-errors", "allow-running-insecure-content", "disable-translate",
-      "always-authorize-plugins", "disable-extensions","disable-notifications"]
+      "always-authorize-plugins", "disable-extensions","disable-notifications","disable-geolocation", "enable-strict-powerful-feature-restrictions", "disable-notifications"]
      }
   }
 }
+environments {
+  qa{
+    base.url = "https://demo.serenity.is/Account/Login/?ReturnUrl=%2F"
+    base.user = user
+    base.pass = pass
+  }
+  dev{
+    base.url = "http://google.com"
+    base.user = user
+    base.pass = pass
+  }
+
+  cert {
+    base.url = "dev"
+    base.user = user
+    base.pass = pass
+
+  }
+}
+
