--- a/serenity.properties
+++ b/serenity.properties
@@ -1,4 +1,4 @@
-serenity.project.name = BaseServiciosScreenPlay
+serenity.project.name = BaseWebPOM
 serenity.use.unique.browser = false
 serenity.dry.run=false
 serenity.verbose.steps=FALSE
