--- a/build.gradle
+++ b/build.gradle
@@ -1,4 +1,4 @@
-group 'BasePruebaTecnicaPOM'
+group 'BaseWebPOM'
 version '1.0'
 apply plugin: 'java-library'
 apply plugin: 'java'
@@ -55,7 +55,7 @@ dependencies {
 
 test {
     useJUnit {
-        include "**/*";
+        include "**/*"
         gradle.startParameter.continueOnFailure = true
         testLogging.showStandardStreams = true
         systemProperties System.getProperties()
